# MAVSDK

examples/: CMakeLists.txt
examples/gcs_cmd_flight_mode/: CMakeLists.txt  gcs_cmd_flight_mode.cpp
examples/gcs_flight_mode/: CMakeLists.txt  gcs_flight_mode.cpp
src/mavsdk/plugins/action/: action.cpp  action_impl.cpp  action_impl.h
src/mavsdk/plugins/action/include/plugins/action/: action.h
src/mavsdk/plugins/action/mocks/: action_mock.h
src/mavsdk/plugins/telemetry/: telemetry.cpp  telemetry_impl.cpp  telemetry_impl.h
src/mavsdk/plugins/telemetry/include/plugins/telemetry/: telemetry.h
src/mavsdk/plugins/telemetry/mocks/: telemetry_mock.h
src/mavsdk_server/src/plugins/action/: action_service_impl.h
src/mavsdk_server/src/plugins/telemetry/: telemetry_service_impl.h
src/mavsdk_server/test/: telemetry_service_impl_test.cpp
